--- a/src/Components/Footer/Footer.css
+++ b/src/Components/Footer/Footer.css
@@ -1,7 +1,7 @@
 .footer{
     padding: 60px;
     width: 100%;
-    height: 40vh;
+    height: 250px;
     background-color: rgba(0, 0, 0, 0.89);
 }
 .footer-link a{
