--- a/src/Components/Signup/Signup.css
+++ b/src/Components/Signup/Signup.css
@@ -3,7 +3,7 @@
   background-repeat: no-repeat;
   background-attachment: scroll;
   background-size: cover;
-  height: 100vh;
+  height: 100%;
   padding-top: 100px;
 }
 .signup-logo {
