fixed quantity on cart

--- a/src/Components/Cart/Cart.css
+++ b/src/Components/Cart/Cart.css
@@ -3,6 +3,7 @@
     padding: 10px;
     background-color: rgba(128, 128, 128, 0.253);
     border-radius: 8px;
+    width: 280px;
 }
 .displayCart img{
     width: 60px;
