--- a/src/Components/OrderDetails/OrderDetails.css
+++ b/src/Components/OrderDetails/OrderDetails.css
@@ -28,19 +28,22 @@
 }
 .cart{
     width: 30%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 .cart-summary{
     margin: 15px;
     margin-bottom: 0;
     padding: 10px;
+    width: 280px;
 }
 .place-btn{
     background-color: rgb(209, 49, 76);
     color: white;
-    margin: 0 15px;
     padding: 5px;
     border: none;
-    width: 90%;
+    width: 280px;
     border-radius: 8px;
 
 }
