--- a/src/Components/OrderDetails/OrderDetails.css
+++ b/src/Components/OrderDetails/OrderDetails.css
@@ -1,56 +1,58 @@
-.orderDetails{
-    margin: 4% 10%;
-    display: flex;
-    justify-content: space-between;
+.orderDetails {
+  margin: 4% 10%;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
-.delivery{
-    width: 50%;
+.delivery {
+  width: 50%;
 }
-.delivery input{
-    margin: 10px;
-    padding: 5px;
-    padding-left: 10px;
-    border: none;
-    border-radius: 6px;
-    background-color: rgba(128, 128, 128, 0.253);
+.delivery input {
+  margin: 10px;
+  padding: 5px;
+  padding-left: 10px;
+  border: none;
+  border-radius: 6px;
+  background-color: rgba(128, 128, 128, 0.253);
 }
-.delivery input:focus{
-    outline-color:  rgb(209, 49, 76);
+.delivery input:focus {
+  outline-color: rgb(209, 49, 76);
 }
-.delivery .submit{
-    background-color: rgb(209, 49, 76);
-    color: white;
+.delivery .submit {
+  background-color: rgb(209, 49, 76);
+  color: white;
 }
-.delivery .submit:hover{
-    background-color: white;
-    border: 1px solid rgb(209, 49, 76);
-    color: rgb(209, 49, 76);
+.delivery .submit:hover {
+  background-color: white;
+  border: 1px solid rgb(209, 49, 76);
+  color: rgb(209, 49, 76);
 }
-.cart{
-    width: 30%;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+.cart {
+  width: 30%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
-.cart-summary{
-    margin: 15px;
-    margin-bottom: 0;
-    padding: 10px;
-    width: 280px;
+.cart-summary {
+  margin: 15px;
+  margin-bottom: 0;
+  padding: 10px;
+  width: 280px;
 }
-.place-btn{
-    background-color: rgb(209, 49, 76);
-    color: white;
-    padding: 5px;
-    border: none;
-    width: 280px;
-    border-radius: 8px;
-
+.place-btn {
+  background-color: rgb(209, 49, 76);
+  color: white;
+  padding: 5px;
+  border: none;
+  width: 280px;
+  border-radius: 8px;
 }
-.place-btn:hover{
-    background-color: white;
-    border: 1px solid rgb(209, 49, 76);
-    color: rgb(209, 49, 76);
+.place-btn:hover {
+  background-color: white;
+  border: 1px solid rgb(209, 49, 76);
+  color: rgb(209, 49, 76);
 }
-
-
+.total p {
+  color: rgb(209, 49, 76);
+  font-weight: bold;
+}
