--- a/src/Components/Footer/Footer.css
+++ b/src/Components/Footer/Footer.css
@@ -4,6 +4,9 @@
     height: 250px;
     background-color: rgba(0, 0, 0, 0.89);
 }
+.footer-img{
+    width: 200px;
+}
 .footer-link a{
     text-decoration: none;
     color: white    ;
@@ -15,4 +18,15 @@
 .footer p{
     color: white;
     margin-top: 40px;
+}
+@media (max-width:700px) {
+    .footer{
+        padding: 20px;
+        height: auto;
+        margin-top: 30px;
+    }
+    .footer-img{
+        width: 150px;
+    }
+   
 }
