--- a/src/Components/Header/Header.css
+++ b/src/Components/Header/Header.css
@@ -1,34 +1,106 @@
-.header{
-    padding: 10px 30px;
-    padding-top: 20px;
-    display: flex;
-    justify-content: space-between;
-    background-color: white;
+.header {
+  padding: 10px 30px;
+  padding-top: 20px;
+  display: flex;
+  justify-content: space-between;
+  background-color: white;
 }
-.logo{
-    width: 160px;
+.logo {
+  width: 160px;
 }
 
-.nav-login{
-    text-decoration: none;
+.nav-login {
+  text-decoration: none;
+  color: black;
+}
+.nav-login:hover {
+  color: rgb(209, 49, 76);
+  font-weight: bolder;
+}
+.nav-signup {
+  text-decoration: none;
+  background-color: rgb(209, 49, 76);
+  color: white;
+  padding: 5px 20px;
+  border-radius: 20px;
+}
+.nav-signup:hover {
+  background-color: black;
+  color: white;
+}
+.header-cart{
     color: black;
 }
-.nav-login:hover{
-    color: rgb(209, 49, 76);
-    font-weight: bolder;
+.header-cart:hover {
+  color: rgb(209, 49, 76);
+  font-weight: bolder;
 }
-.nav-signup{
-    text-decoration: none;
-    background-color: rgb(209, 49, 76);
+.bar-button{
+    color: rgb(209, 49, 76);
+    border: 1px solid rgb(209, 49, 76);
+    display: none;
+}
+.menu{
+    display: flex;
+    justify-content: space-between;
+}
+.navlink{
+    transition: all 500ms ease-in;
+}
+
+@media (max-width: 700px) {
+  .header {
+    padding: 20px 0;
+    
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    background-color: white;
+  }
+  .logo {
+    padding: 0;
+    height: 40px;
+  }
+  .navlink {
+    display: flex;
+    flex-direction: column;
+    margin-top: 20px;
+    padding: 20px;
+    width: 100vw;
+    background-color: rgb(209, 49, 76);    
+  }
+  .header-cart,
+  .navlink a {
+    text-align: center;
+    margin: 0;
+    color: white;
+    padding: 10px;
+    display: block;
+    
+  }
+  .header-cart:hover,
+  .navlink a:hover {
     color: white;
     padding: 5px 20px;
     border-radius: 20px;
-}
-.nav-signup:hover{
     background-color: black;
-    color:  white ;
+  }
+  .bar-button{
+    display: block;
+    width: 40px;
 }
-.header-cart:hover{
-    color:  rgb(209, 49, 76);
-    font-weight: bolder;
+.menu{
+    width: 100vw;
+    padding: 0px 10px;
+}
+.show{
+    position: absolute;
+    top: 60px;
+}
+
+.hide{
+    position: absolute;
+    top: -800px;
+}
+
 }
