--- a/src/Components/Signup/Signup.css
+++ b/src/Components/Signup/Signup.css
@@ -51,3 +51,25 @@
 .signup a:hover{
     font-weight: bold;
 }
+@media (max-width: 991px){
+  .signup {
+    height: 80vh;
+    padding-top: 200px;
+  }
+}
+@media (max-width: 700px){
+  .signup {
+    height: 80vh;
+    padding-top: 80px;
+    margin-top: 30px;
+  }
+  .signup-logo {
+    width: 160px;
+  }
+  .signup-input {
+    display: flex;
+    flex-direction: column;
+    width: 80%;
+    margin: 40px auto;
+  }
+}
