--- a/src/Components/Header/Header.css
+++ b/src/Components/Header/Header.css
@@ -51,7 +51,6 @@
 @media (max-width: 700px) {
   .header {
     padding: 20px 0;
-    
     display: flex;
     flex-direction: column;
     justify-content: space-between;
@@ -67,7 +66,7 @@
     margin-top: 20px;
     padding: 20px;
     width: 100vw;
-    background-color: rgb(209, 49, 76);    
+    background-color: rgb(209, 49, 76); 
   }
   .header-cart,
   .navlink a {
@@ -96,11 +95,13 @@
 .show{
     position: absolute;
     top: 60px;
+    right:0;
 }
 
 .hide{
     position: absolute;
-    top: -800px;
+    top: 60px;
+    right: -600px;
 }
 
 }
