--- a/src/Components/Header/Header.css
+++ b/src/Components/Header/Header.css
@@ -22,6 +22,7 @@
   background-color: rgb(209, 49, 76);
   color: white;
   padding: 5px 20px;
+  padding-bottom: 8px;
   border-radius: 20px;
 }
 .nav-signup:hover {
@@ -87,6 +88,7 @@
   .bar-button{
     display: block;
     width: 40px;
+    background-color: white;
 }
 .menu{
     width: 100vw;
