--- a/src/Components/Signup/Signup.css
+++ b/src/Components/Signup/Signup.css
@@ -3,7 +3,7 @@
   background-repeat: no-repeat;
   background-attachment: scroll;
   background-size: cover;
-  height: 100%;
+  height: 90vh;
   padding-top: 100px;
 }
 .signup-logo {
@@ -32,7 +32,7 @@
   color: white;
   font-size: 18px;
   padding: 10px;
-  border: none;
+  border: none !important;
   border-radius: 6px;
 }
 .signup-btn:hover{
@@ -53,16 +53,18 @@
 }
 @media (max-width: 991px){
   .signup {
-    height: 80vh;
     padding-top: 200px;
+  }
+  .signup a{
+    font-weight: bold;
   }
 }
 @media (max-width: 700px){
   .signup {
-    height: 80vh;
     padding-top: 80px;
     margin-top: 30px;
   }
+ 
   .signup-logo {
     width: 160px;
   }
