--- a/src/Components/Cart/Cart.css
+++ b/src/Components/Cart/Cart.css
@@ -27,3 +27,10 @@
     color: black;
     cursor: pointer;
 }
+.quantity{
+    color: rgb(209, 49, 76) ; 
+    background-color:  rgba(128, 128, 128, 0);
+    cursor: pointer;
+    font-weight: bold;
+    border: none;
+}
